# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fenc=utf-8 sts=4 ts=4 et nomod:

2023-11-29 Michael Truog   <mjtruog at protonmail dot com>

    * Fix 0.0 =/= -0.0 match Erlang/OTP 26.1 warning in cloudi_math eunit test
    * Add C++ std::ignore use

2023-11-03 Michael Truog   <mjtruog at protonmail dot com>

    * Fix cloudi_service_api_requests json representation of the
      {{M :: atom(), F :: atom(), A :: list()}} closure
      configuration argument format
    * Fix cloudi_service_api_batch queue erl/json requests to provide
      the same data provided by cloudi_service_api_requests
    * Fix C++ backtrace checks when -Werror is in CXXFLAGS

2023-10-27 Michael Truog   <mjtruog at protonmail dot com>

    * CloudI version 2.0.7 released

2023-10-19 Michael Truog   <mjtruog at protonmail dot com>

    * Fix Haskell CloudI API compilation with GHC 9.8 and 9.6

2023-10-13 Michael Truog   <mjtruog at protonmail dot com>

    * Improve the cloudi_service_router http_redirect_secondaries argument
      by allowing arguments specific to the secondary

2023-10-12 Michael Truog   <mjtruog at protonmail dot com>

    * Update OCaml zarith to 1.13 for big-integer support
      in the Erlang External Term Format

2023-10-11 Michael Truog   <mjtruog at protonmail dot com>

    * Add Erlang process descriptions in cloudi_core service processes
    * Add C++ lambda use in the C++ messaging integration test

2023-10-10 Michael Truog   <mjtruog at protonmail dot com>

    * Add cloudi_service_health_check dns_nameservers argument
      for providing the DNS nameservers used explicitly
    * Improve the Python/C CloudI API callback handling

2023-10-07 Michael Truog   <mjtruog at protonmail dot com>

    * Improve the Python/C CloudI API by adding per-interpreter GIL support
    * Add cloudi_service_api_batch queue functions for getting
      the contents of a queue

2023-09-23 Michael Truog   <mjtruog at protonmail dot com>
